# uDownloader

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  launcher_desktop.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: dev-to-staging.yml  main-publish.yml  publish.yml  staging-to-main.yml  tests.yml
docs/: CHANGELOG.md  CICD_SETUP.md  CONTRIBUTING.md  INSTALLATION.md  QUICK_REFERENCE.md  SECURITY.md
tests/: __init__.py  test_udownloader.py
uDownloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
youdownload/: __init__.py  async_downloader.py  cli.py  config.py  desktop.py  downloader.py  history.py
